; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5758.c_ad5758_set_out_range.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5758.c_ad5758_set_out_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ad5758_state = type { i32 }

@AD5758_DAC_CONFIG = common dso_local global i32 0, align 4
@AD5758_DAC_CONFIG_RANGE_MSK = common dso_local global i32 0, align 4
@AD5758_DIGITAL_DIAG_RESULTS = common dso_local global i32 0, align 4
@AD5758_CAL_MEM_UNREFRESHED_MSK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ad5758_state*, i32)* @ad5758_set_out_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad5758_set_out_range(%struct.ad5758_state* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ad5758_state*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ad5758_state* %0, %struct.ad5758_state** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ad5758_state*, %struct.ad5758_state** %4, align 8
  %8 = load i32, i32* @AD5758_DAC_CONFIG, align 4
  %9 = load i32, i32* @AD5758_DAC_CONFIG_RANGE_MSK, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @AD5758_DAC_CONFIG_RANGE_MODE(i32 %10)
  %12 = call i32 @ad5758_spi_write_mask(%struct.ad5758_state* %7, i32 %8, i32 %9, i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %3, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load %struct.ad5758_state*, %struct.ad5758_state** %4, align 8
  %19 = load i32, i32* @AD5758_DIGITAL_DIAG_RESULTS, align 4
  %20 = load i32, i32* @AD5758_CAL_MEM_UNREFRESHED_MSK, align 4
  %21 = call i32 @ad5758_wait_for_task_complete(%struct.ad5758_state* %18, i32 %19, i32 %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %17, %15
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @ad5758_spi_write_mask(%struct.ad5758_state*, i32, i32, i32) #1

declare dso_local i32 @AD5758_DAC_CONFIG_RANGE_MODE(i32) #1

declare dso_local i32 @ad5758_wait_for_task_complete(%struct.ad5758_state*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
